<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLoginMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/txt_lbl_app_title"
        android:textColor="@color/colorGrayDark"
        android:textAlignment="center"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/backgroun_curved_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="30dp"
            android:maxLines="1"
            android:background="@drawable/editext_background_white"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/edtTxt_hint_username"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/editext_background_white"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/edtTxt_hint_password"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/edtUsername"
            app:layout_constraintStart_toStartOf="@+id/edtUsername"
            app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/button_background_grey"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/btn_lbl_login"
            android:textAllCaps="false"
            android:textColor="@color/colorGrayDark"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edtPassword"
            app:layout_constraintStart_toStartOf="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    


</androidx.constraintlayout.widget.ConstraintLayout>